Bugfixes, Fixed on iOS devices

--- a/public/scss/desktop/style.scss
+++ b/public/scss/desktop/style.scss
@@ -176,6 +176,10 @@ section.ds {
   color: white;
   padding-right: 80px;
 
+  .row {
+    justify-content: center;
+  }
+
   ul {
     padding: 0;
     margin: 0;
@@ -784,6 +788,7 @@ section.ds {
   .ds, .naviContainer  {
     padding-right: 40px;
   }
+
   .scroll {
     margin-left: -63px;
   }
@@ -835,10 +840,18 @@ section.ds {
   }
 
 
+
+
   .projects {
 
+    .row {
+
+    }
     .col {
-      min-width: 70%;
+      flex: 1 0 auto;
+      max-width: 100%;
+      margin: 10px 0;
+
       height: 290px!important;
       overflow: hidden;
 
@@ -919,19 +932,123 @@ section.ds {
 
   .skills {
     .col {
-      min-width:120px;
+      min-width:110px;
+      width: 40%;
+      flex: 1 0 auto;
     }
   }
   .scroll {
     display: none;
   }
+  .navigation {
+    .currentPage {
+      display: none;
+    }
+  }
+
+  .section {
+    overflow: hidden;
+  }
+  .map {
+    .height100vh {
+      height: inherit;
+
+    }
+    .row .align-items-center {
+      -webkit-align-items: flex-start!important;
+      align-items: flex-start!important;
+    }
+
+    h5 {
+      font-size: 14px;
+    }
+    p {
+      font-size: 12px;
+    }
+    .col {
+      display: flex;
+      flex-direction: column;
+
+    }
+    .vita section {
+      padding: 5px;
+      margin:auto!important;
+      margin-bottom: 10px!important;
+      background: none!important;
+      border:none;
+    }
+    .vita section::after {
+      background: none!important;
+      border: none!important;
+    }
+    .flex-column {
+      flex-direction: row!important;
+    }
+
+  }
+  .naviContainer {
+    width: 100%;
+    left: 0;
+    .row {
+      width: 100%;
+      ul {
+        width: 100%;
+
+      }
+    }
+  }
+  .galerie {
+    .col-md-1{
+      display: none;
+    }
+  }
+
+  .contact {
+    h3 {
+      font-size: 14px;
+    }
+    p,a {
+      font-size: 12px;
+    }
+    .row {
+      .left,.right {
+        padding: 15px;
+        flex: 1 0 auto;
+
+      }
+    }
+  }
+
+
+
+  .scroll {
+      display: none!important;
+  }
+  .naviContainer {
+    .row {
+      justify-content: inherit;
+    }
+  }
+  .naviContainer .imprint {
+    bottom: 70px;
+  }
+
+
 
 }
 
 @media (max-width: 800px) and (min-width: 600px) {
   .projects {
+    .col.pinned {
+      max-width: 100%;
+      height: 360px!important;
+      figure {
+        height: 250px!important;
+      }
+    }
     .col {
-      min-width: 45%;
+      flex: 1 0 auto;
+      max-width:50%;
       height: 290px!important;
 
     }
